--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,6 @@
                 <button class="button">Submit</button>
             </form>
         </div>
-        <script src="scripts/uuid.js"></script>
-        <script src="scripts/todo-functions.js"></script>
-        <script src="scripts/todo-app.js"></script>
+        <script src="scripts/bundle.js"></script>
     </body>
 </html>
